libs/tree-sitter-wing/test/corpus/references.txt
================================================================================
Nested identifier
================================================================================

test1.test2.test3;

--------------------------------------------------------------------------------

(source
  (expression_statement
    (nested_identifier
      object: (nested_identifier
        object: (identifier)
        property: (identifier))
      property: (identifier))))

================================================================================
Nested identifier method call
================================================================================

test1.test2.test3();

--------------------------------------------------------------------------------

(source
  (expression_statement
    (call
      caller: (nested_identifier
        object: (nested_identifier
          object: (identifier)
          property: (identifier))
        property: (identifier))
      args: (argument_list))))
